# xyise

./: .gitignore  README.md  pyproject.toml
notebook/adhoc/: code  code.c  learner.ipynb  normal_file.txt
notebook/bondfutures/: bondfuture.ipynb  bondfutures.tex
notebook/conditional_expectation/: nb_conditional_expectation.ipynb
notebook/correlation_horizon/: nb_corr_term.ipynb
notebook/deribit/: 20220817212403.pkl  deribit_helpers.py  insts_20220817220159.pkl  nb_deribit.ipynb  option_dataset.py  ticks_20220817220159.pkl
notebook/diffusion_models/: denoising.ipynb
notebook/earth_temperature/: et.ipynb  et_analytics.py  et_dataset.py  et_utils.py
notebook/efficient_frontiers/: daily_returns.csv  nb_ef.ipynb
notebook/garch11/: garch11.py  nb_garch_11.ipynb
notebook/kalman_filter/: nb_kalman.ipynb
notebook/mr-ou/: ^TNX.csv  nb_estim.ipynb
notebook/numba/: numba_func.py  numba_numpy.ipynb
notebook/parametric_var/: pvar.ipynb
notebook/python_sandbox/: adhoc.ipynb
notebook/regex/: regex_note.ipynb
notebook/regression_general/: rg.ipynb
notebook/transformer/: keras_example.ipynb
notebook/varsvar/: different_vars.ipynb  nb_varsvar.ipynb
program_languages/assembly/: hello.asm
scratchpad/cpp/: helloworld.cpp
scratchpad/csharp/: csharp.sln
scratchpad/fftw/: hello_fftw.c  hello_fftw.py
scratchpad/fluent_python/: nb_fp.ipynb  vector_v1.py
scratchpad/ig/: igm_run.py  nb_igm.ipynb
scratchpad/mongo/: MongoDB Playground.mongodb
scratchpad/qv/: oqv.ipynb
scratchpad/tensorflow/: basics.ipynb
share/: de.md
(+76 files in other folders)
